fix: reload auth key on change #2667
Squashed commit of the following:

commit af1f5381d08759af3d1057b36f29b86ce8a46642
Author: Madis Loitmaa <madis.loitmaa@nortal.com>
Date:   Fri Mar 7 12:32:14 2025 +0200

    test: added tests for auth key change

    Refs: XRDDEV-2760

commit 7f4fb7cf708fc234f1390b644d33a8c0eff5cde1
Author: Madis Loitmaa <madis.loitmaa@nortal.com>
Date:   Fri Feb 28 17:21:13 2025 +0200

    chore: license

    Refs: XRDDEV-2760

commit 60243df676652a0cc8230b6b3070f38cc8c44077
Author: Madis Loitmaa <madis.loitmaa@nortal.com>
Date:   Fri Feb 28 16:58:46 2025 +0200

    chore: removed unused imports

    Refs: XRDDEV-2760

commit 9c8263dfd387262305601582202ce937b3f07e22
Author: Madis Loitmaa <madis.loitmaa@nortal.com>
Date:   Fri Feb 28 16:48:20 2025 +0200

    fix: reloading ServerProxy auth key on change

    Refs: XRDDEV-2760

commit 3e5b91fc13a5efaf13763875618bd3fb6e9cc46c
Author: Madis Loitmaa <madis.loitmaa@nortal.com>
Date:   Fri Feb 28 08:57:58 2025 +0200

    fix: replace client SSLContext on auth key change

    Refs: XRDDEV-2760

commit 9f7d29db96e016506a4eae9fa89cb57136052da9
Author: Madis Loitmaa <madis.loitmaa@nortal.com>
Date:   Fri Feb 21 17:23:40 2025 +0200

    chore: fix relative location

    Refs: XRDDEV-2760

commit 4efbd636edb9d1e8cd23330f935833c7b4e9ebdf
Author: Madis Loitmaa <madis.loitmaa@nortal.com>
Date:   Fri Feb 21 17:05:51 2025 +0200

    fix: invalidate client proxy SSL sessions when auth key changes

    Refs: XRDDEV-2760

--- a/src/proxy/application/build.gradle
+++ b/src/proxy/application/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     testImplementation(project(':common:common-message'))
     testImplementation(project(':common:common-test'))
     testImplementation(project(':common:common-verifier'))
+    testImplementation(project(":common:common-messagelog"))
+    testImplementation(project(":common:common-scheduler"))
     testImplementation(project(':serverconf'))
     testImplementation project(path: ":proxy:core", configuration: 'testArtifacts')
 }
