XRDDEV-2756 env setup improvements (#2722)
* chore: drop payloadgen src in favor of precompiled binaries

Refs: XRDDEV-2756

* feat: add more flexible hurl an is service usage

Refs: XRDDEV-2756

* feat: add more flexible hurl an is service usage

Refs: XRDDEV-2756

* feat: add more flexible hurl an is service usage

Refs: XRDDEV-2756

--- a/ansible/roles/xroad-hurl/tasks/main.yml
+++ b/ansible/roles/xroad-hurl/tasks/main.yml
@@ -1,11 +1,5 @@
 - name: Install Hurl
   block:
-    - name: Set Hurl facts
-      set_fact:
-        hurl_version: "5.0.1"
-        hurl_install_dir: "/opt/hurl"
-        hurl_files: "{{ playbook_dir }}/../development/hurl/scenarios/"
-
     - name: Set package name
       set_fact:
         hurl_dirname: "hurl-{{ hurl_version }}-{{ ansible_architecture }}-unknown-linux-gnu"
@@ -13,6 +7,12 @@
     - name: Create install directory
       file:
         path: "{{ hurl_install_dir }}"
+        state: directory
+        mode: '0755'
+
+    - name: Create scenario directory
+      file:
+        path: "{{ hurl_install_dir }}/scenario"
         state: directory
         mode: '0755'
 
@@ -32,7 +32,7 @@
     - name: Copy Hurl configuration files
       copy:
         src: "{{ hurl_files }}"
-        dest: "{{ hurl_install_dir }}/scenario"
+        dest: "{{ hurl_files_dest }}"
         group: "root"
         owner: "root"
         mode: "0644"
@@ -40,8 +40,8 @@
 
     - name: Copy Hurl env file
       copy:
-        src: "files/hurl.env"
-        dest: "{{ hurl_install_dir }}/"
+        src: "{{ hurl_env_file }}"
+        dest: "{{ hurl_install_dir }}/scenario/"
         group: "root"
         owner: "root"
         mode: "0644"
