--- a/ansible/roles/xroad-is/tasks/setup-xrd4j.yml
+++ b/ansible/roles/xroad-is/tasks/setup-xrd4j.yml
@@ -33,7 +33,7 @@
 - name: Download example-adapter
   get_url:
     url: "https://artifactory.niis.org/xroad-maven-snapshots/org/niis/example-adapter/{{ latest_version.stdout }}/{{ artifact_filename.stdout }}"
-    dest: /example-adapter.war
+    dest: /opt/example-adapter.war
     mode: '0644'
 
 - name: Create systemd service
@@ -45,6 +45,39 @@
 - name: Start and enable example-adapter service
   systemd:
     name: example-adapter
+    state: started
+    enabled: yes
+    daemon_reload: yes
+
+- name: Get latest test-service version
+  shell: |
+    curl -s "https://artifactory.niis.org/api/storage/xroad-maven-snapshots/org/niis/test-service/" | \
+    jq -r '.children[] | select(.uri | contains("SNAPSHOT")) | .uri' | \
+    sort -V | tail -n1 | tr -d '/'
+  register: latest_test_version
+
+- name: Get latest test-service artifact URL
+  shell: |
+    curl -s "https://artifactory.niis.org/api/storage/xroad-maven-snapshots/org/niis/test-service/{{ latest_test_version.stdout }}" | \
+    jq -r '.children[] | select(.uri | endswith(".war")) | .uri' | \
+    sort -V | tail -n1 | tr -d '/'
+  register: test_artifact_filename
+
+- name: Download test-service
+  get_url:
+    url: "https://artifactory.niis.org/xroad-maven-snapshots/org/niis/test-service/{{ latest_test_version.stdout }}/{{ test_artifact_filename.stdout }}"
+    dest: /opt/test-service.war
+    mode: '0644'
+
+- name: Create test-service systemd service
+  template:
+    src: templates/test-service.service.j2
+    dest: /etc/systemd/system/test-service.service
+    mode: '0644'
+
+- name: Start and enable test-service service
+  systemd:
+    name: test-service
     state: started
     enabled: yes
     daemon_reload: yes
