--- a/sidecar/slim/Dockerfile
+++ b/sidecar/slim/Dockerfile
@@ -29,6 +29,9 @@ ADD ["${REPO}/dists/${DIST}/Release","/tmp/Release"]
 
 RUN echo "deb $REPO $DIST $COMPONENT" >/etc/apt/sources.list.d/xroad.list \
   && apt-key add '/tmp/repokey.gpg' \
+  # Do not exclude man pages & other documentation
+  && rm -f /etc/dpkg/dpkg.cfg.d/excludes \
+  # Install
   && apt-get -qq update \
   && XROAD_IGNORE_DATABASE_SETUP=1 apt-get -qq install \
     xroad-proxy \
