--- a/deployment/security-server/docker/compose.yaml
+++ b/deployment/security-server/docker/compose.yaml
@@ -85,6 +85,10 @@ services:
       - XROAD_HOST=configuration-client
       - XROAD_SECRET_STORE_HOST=openbao
       - XROAD_SECRET_STORE_TOKEN=${XROAD_SECRET_STORE_TOKEN}
+      - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL=jdbc:postgresql://db-serverconf:5432/serverconf
+      - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_DRIVER_CLASS=org.postgresql.Driver
+      - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_USERNAME=serverconf
+      - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_PASSWORD=secret
     healthcheck:
       interval: 5s
       retries: 40
@@ -101,6 +105,8 @@ services:
     depends_on:
       openbao:
         condition: service_healthy
+      db-serverconf-init:
+        condition: service_completed_successfully
   monitor:
     image: ${MONITOR_IMG}
     pull_policy: always
