chore: do not schedule cert reload job if scheduler is not started, disable confclient db on cli mode
Refs: XRDDEV-2867

--- a/src/service/configuration-client/configuration-client-application/src/main/resources/application.yaml
+++ b/src/service/configuration-client/configuration-client-application/src/main/resources/application.yaml
@@ -36,6 +36,8 @@ quarkus:
 
 "%cli":
   quarkus:
+    datasource:
+      active: false
     scheduler:
       enabled: false
       start-mode: halted
