--- a/src/packages/src/xroad/ubuntu/generic/xroad-proxy.service
+++ b/src/packages/src/xroad/ubuntu/generic/xroad-proxy.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=X-Road Proxy
-After=network.target xroad-base.service
+After=network.target xroad-base.service xroad-secret-store-local.service xroad-secret-store-remote.service
 Requires=xroad-base.service
-Wants=postgresql.service
+Wants=postgresql.service xroad-secret-store-local.service xroad-secret-store-remote.service
 Wants=xroad-signer.service xroad-confclient.service
 
 [Service]
