chore: improve rpc properties wih Duration
Refs: XRDDEV-2879

--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -55,7 +55,7 @@ server:
 xroad:
   common:
     global-conf:
-      refresh-rate-seconds: -1 # UI has its own refresh job.
+      refresh-rate: -1 # UI has its own refresh job.
   proxy-ui-api:
     rate-limit-requests-per-second: 20
     rate-limit-requests-per-minute: 600
