feat: XRDDEV-599 Validate reserved service codes to protect internal metaservices

--- a/src/security-server/admin-service/application/src/main/resources/common-application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/common-application.yml
@@ -37,6 +37,7 @@ xroad:
     request-size-limit-binary-upload: 10MB
     authentication-key-algorithm: RSA
     signing-key-algorithm: RSA
+    reserved-service-codes: listClients,listMethods,allowedMethods,getWsdl,getOpenAPI,getSecurityServerMetrics,getSecurityServerOperationalData,getSecurityServerHealthData
 
 file-upload-endpoints:
   endpoint-definitions:
